--- a/src/styles/maih.scss
+++ b/src/styles/maih.scss
@@ -16,9 +16,10 @@ html {
   box-sizing: border-box;
 }
 
-body {
-  background: var(--global-background-color);
-  color: var(--global-text-color);
+#root {
+  background: var(--root-background-color);
+  color: var(--root-text-color);
+  font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1.2rem;
   height: 100%;
   letter-spacing: 0.05rem;
