--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,8 +12,9 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  text-align: left;
+  max-width: 80rem;
   padding: 6rem 0;
+  text-align: left;
   width: 100%;
 
   .header__title {
