--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,16 +9,24 @@
 */
 
 .footer__container {
-  align-items: center;
-  background: var(--footer_container-background);
-  box-shadow: 0 -.25rem .5rem rgba(0, 0, 0, .2);
+  border-top: .1rem solid #888;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
   min-height: 12.5rem;
   padding: 0 3.75rem;
+  width: 100%;
+
+  .footer__content {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 0 auto;
+    max-width: 80rem;
+    width: 100%;
+  }
 
   .footer__paragraph {
     color: var(--footer_paragraph-color);
+    font-size: .8rem;
   }
 }
