--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -8,3 +8,53 @@
  * @since 22-Jan-2025
 */
 
+
+.input__container {
+  display: flex;
+  flex-direction: column;
+  min-height: 4.375rem;
+  max-width: 8rem;
+  width: 100%;
+
+  .input__label {
+    font-size: .8rem;
+    margin-bottom: 1.44rem;
+    opacity: .7;
+    white-space: nowrap;
+  }
+
+  .input__content {
+    align-items: center;
+    background-color: var(--input-background);
+    border: .1rem solid var(--input-border-color);
+    border-radius: .25rem;
+    display: flex;
+    flex-direction: row;
+    min-height: 2.5rem;
+    padding: .4rem .5rem;
+    width: 100%;
+
+    input {
+      background-color: transparent;
+      border: 0;
+      color: #fff;
+      font-size: .8rem;
+      outline: 0;
+      text-transform: uppercase;
+      width: 100%;
+    }
+  }
+
+  input.input__color-picker {
+    border: 0;
+    border-radius: .25rem;
+    cursor: pointer;
+    display: block;
+    max-height: 1.5rem;
+    min-height: 1.5rem;
+    max-width: 1.5rem;
+    min-width: 1.5rem;
+    margin: 0 .25rem 0 0;
+    padding: 0;
+  }
+}
