--- a/src/components/HandleResize/HandleResize.scss
+++ b/src/components/HandleResize/HandleResize.scss
@@ -11,8 +11,8 @@
 
 /* Maniglie di resize */
 .resize-handle {
-  background-color: #F12093;
-  border: .125rem solid #F12093;
+  background-color: #fff;
+  border: .1rem solid #00f;
   cursor: nwse-resize;
   height: .5rem;
   width: .5rem;
