--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -14,6 +14,7 @@
   width: 100%;
 
   .field__label {
+    color: var(--input-label-color);
     font-size: .8rem;
     margin-bottom: 1.44rem;
     opacity: .7;
@@ -21,6 +22,7 @@
   }
 
   .field__value {
+    color: var(--input-value-color);
     font-size: 1rem;
     font-weight: 700;
   }
