--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -13,13 +13,29 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  overflow-x: hidden;
   padding: 3.75rem;
+  position: relative;
   min-height: calc(100vh - 12.5rem);
   width: 100%;
+
+  .home__grid-container {
+    left: 50%;
+    opacity: .3;
+    position: absolute;
+    top: 0;
+    transform: translateX(-50%);
+    z-index: 1;
+
+    stop {
+      stop-color: var(--home-grid-stop-color);
+    }
+  }
 
   .main {
     max-width: 80rem;
     width: 100%;
+    z-index: 3;
   }
 
   .grid {
